Fix broken css in voting for card 'button container'
(cherry picked from commit 09f178dbfd2a50c707cb747383d8b7b19da8a326)

--- a/decidim-budgets_booth/app/packs/stylesheets/decidim/budgets_booth/budgets_booth.scss
+++ b/decidim-budgets_booth/app/packs/stylesheets/decidim/budgets_booth/budgets_booth.scss
@@ -204,6 +204,22 @@
   }
 }
 
+.budget__card__vote{
+  @apply flex flex-row justify-between lg:space-y-2 lg:block;
+
+  .budget__card__highlight-vote__header{
+    @apply flex flex-col items-start space-y-2 lg:items-center;
+
+    .budget__card__highlight-vote__text{
+      @apply text-md max-w-[150px] truncate;
+    }
+
+    .budget__card__highlight-vote__number{
+      @apply font-bold text-[28px] max-w-[150px] max-h-[38px] truncate;
+    }
+  }
+}
+
 .pre-voting-budget-summary{
   @apply py-4 bg-[#f2fcfd];
 }
